tests/data/valid/basic/hello-world.cbl
      *> Basic COBOL Hello World Program
       IDENTIFICATION DIVISION.
       PROGRAM-ID. HELLO-WORLD.
       AUTHOR. Test Suite.
       DATE-WRITTEN. 2025-07-01.
       
       PROCEDURE DIVISION.
       MAIN-PARAGRAPH.
           DISPLAY "Hello, World!".
           STOP RUN.