tests/data/invalid/syntax/missing-period.cbl
      *> Syntax error - missing periods
       IDENTIFICATION DIVISION.
       PROGRAM-ID. MISSING-PERIOD
       
       PROCEDURE DIVISION.
       MAIN-PARA.
           DISPLAY "Missing period after PROGRAM-ID"
           STOP RUN.